--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,13 @@
-Hello world. I am a template
+<!doctype html>
+
+<html lang="en">
+<head>
+
+  <title>Availability checker</title>
+
+</head>
+
+<body>
+  <h1>There are {{num}} people at Tisch right now</h1>
+</body>
+</html>
