--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
   <title>Availability checker</title>
 </head>
 
-<body>
-  <h1>There are {{num}} people at Tisch right now</h1>
+<body onload="init()">
+  <h1>There are <span id="counter">{{num}}</span> people at Tisch right now</h1>
   <button onclick="increment()">Increment</button>
   <button onclick="decrement()">Decrement</button>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
