--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 	  	<title>Availability Checker</title>
 	</head>
-		<h1 id="headline"><center><p id=rcorners1>There are <span id="counter">{{num}}</span> people in Carm right now!</p></center></h1>
+	<body onload="init()">
+		<h1 id="headline"><center><p id="rcorners1">There are <span id="counter">{{num}}</span> people in Carm right now!</p></center></h1>
 
 		<p>This website allows people who visit it to check the occupancy in Carmichael Dining Hall. We find it may be useful for those who want to have a meal but aren't sure if they will find a seat or not.</p>
 
 		<p>We have created this system as a final project for the our Creativity, Fabrication, & Problem Solving Class.</p>
+		<script src="../static/js/app.js"></script>
+	</body>
 </html>
