--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 		<p>This website allows people who visit it to check the occupancy in Carmichael Dining Hall. We find it may be useful for those who want to have a meal but aren't sure if they will find a seat or not.</p>
 
 		<p>We have created this system as a final project for the our Creativity, Fabrication, & Problem Solving Class.</p>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="../static/js/app.js"></script>
 	</body>
 </html>
